// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NativeRouteCard > affiche les informations économiques lorsqu'elles sont disponibles 1`] = `
<div>
  <div
    class="bg-gradient-to-br from-emerald-500/10 to-blue-500/10 border border-emerald-500/20 rounded-xl p-3"
  >
    <div
      class="flex items-center justify-between mb-2"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          class="text-base"
        >
          ⚡
        </span>
        <div
          class="text-xs font-semibold text-emerald-400"
        >
          Route native SwapBack
        </div>
      </div>
      <div
        class="flex items-center gap-1 text-[10px] text-white/80"
      />
    </div>
    <div
      class="space-y-1.5 text-xs"
    >
      <div
        class="flex justify-between"
      >
        <span
          class="text-gray-400"
        >
          Provider
        </span>
        <span
          class="text-white font-medium"
        >
          Raydium
        </span>
      </div>
      <div
        class="flex justify-between"
      >
        <span
          class="text-gray-400"
        >
          Quote
        </span>
        <span
          class="text-white font-medium"
        >
          101.2345
           
          USDC
        </span>
      </div>
      <div
        class="flex justify-between"
      >
        <span
          class="text-gray-400"
        >
          Comparatif
        </span>
        <span
          class="text-white font-medium"
        >
          100.0000
           → 
          101.2345
           
          USDC
        </span>
      </div>
      <div
        class="flex justify-between"
      >
        <span
          class="text-gray-400"
        >
          Amélioration
        </span>
        <span
          class="text-emerald-400 font-semibold"
        >
          +
          42.50
           bps
        </span>
      </div>
      <div
        class="flex justify-between"
      >
        <span
          class="text-gray-400"
        >
          Part utilisateur
           (70.0%)
        </span>
        <span
          class="text-emerald-400 font-medium"
        >
          +
          0.700000
           
          USDC
        </span>
      </div>
      <div
        class="flex justify-between"
      >
        <span
          class="text-gray-400"
        >
          Gain total
        </span>
        <span
          class="text-emerald-300 font-medium"
        >
          +
          1.000000
           
          USDC
        </span>
      </div>
      <div
        class="text-[11px] text-white/70 border-t border-white/10 pt-1"
      >
        70% du gain distribué
      </div>
    </div>
  </div>
</div>
`;

exports[`NativeRouteCard > affiche une explication lorsqu'aucun NPI n'est disponible 1`] = `
<div>
  <div
    class="bg-gradient-to-br from-emerald-500/10 to-blue-500/10 border border-emerald-500/20 rounded-xl p-3"
  >
    <div
      class="flex items-center justify-between mb-2"
    >
      <div
        class="flex items-center gap-2"
      >
        <span
          class="text-base"
        >
          ⚡
        </span>
        <div
          class="text-xs font-semibold text-emerald-400"
        >
          Route native SwapBack
        </div>
      </div>
      <div
        class="flex items-center gap-1 text-[10px] text-white/80"
      >
        <span
          class="px-2 py-0.5 rounded-full bg-white/10 uppercase tracking-wide"
        >
          cache
        </span>
        <span
          class="px-2 py-0.5 rounded-full bg-amber-500/20 text-amber-100 uppercase tracking-wide"
        >
          fallback
        </span>
      </div>
    </div>
    <div
      class="space-y-1.5 text-xs"
    >
      <div
        class="flex justify-between"
      >
        <span
          class="text-gray-400"
        >
          Provider
        </span>
        <span
          class="text-white font-medium"
        >
          SwapBack
        </span>
      </div>
      <div
        class="flex justify-between"
      >
        <span
          class="text-gray-400"
        >
          Quote
        </span>
        <span
          class="text-white font-medium"
        >
          101.2345
           
          SOL
        </span>
      </div>
      <div
        class="flex justify-between"
      >
        <span
          class="text-gray-400"
        >
          Comparatif
        </span>
        <span
          class="text-white font-medium"
        >
          100.0000
           → 
          101.2345
           
          SOL
        </span>
      </div>
      <div
        class="flex justify-between"
      >
        <span
          class="text-gray-400"
        >
          Amélioration
        </span>
        <span
          class="text-emerald-400 font-semibold"
        >
          +
          42.50
           bps
        </span>
      </div>
      <div
        class="text-[11px] text-gray-400"
      >
        Aucune opportunité NPI
      </div>
    </div>
  </div>
</div>
`;
